[package]
name = "bottomify"
version = "1.0.1"
authors = ["uYert Developers <bottom@josh-is.gay>"]
edition = "2018"
include = ["src/lib.rs", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bottomify = "1.0.0"
pyo3 = "0.13.1"

[lib]
name = "bottom"
crate-type = ["cdylib"]

[features]
default = ["pyo3/extension-module"]

[profile.release]
codegen-units = 1  # slow build but possibly faster runtime
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
rpath = false