[package]
name = "bottomify"
version = "1.0.2"
authors = ["uYert Developers <bottom@josh-is.gay>"]
readme = "README.rst"
edition = "2018"
include = ["src/lib.rs", "README.rst"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bottomify = "1.0.0"
pyo3 = "0.13.1"

[package.metadata.maturin]
classifier = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]

[lib]
name = "bottom"
crate-type = ["cdylib"]

[features]
default = ["pyo3/extension-module"]

[profile.release]
codegen-units = 1  # slow build but possibly faster runtime
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
rpath = false